tests/errors/test-static-data-member-no-init.script

class A { static int x; };

//>52429:52429: error C24: a static variable must be initialized.
